# prompt-unifier

./: .env.example  .gitignore  .gitlab-ci.yml  .mega-linter.yml  .pr_agent.toml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile.ci  GEMINI.md  LICENSE  Makefile  README-DOCS.md  README.md  SECURITY.md  TEST.md  mkdocs.yml  package.json  pyproject.toml  sonar-project.properties
.continue/prompts/: main-prompt.md  python-code-review.md  python-refactoring.md  python-unit-tests.md
.continue/rules/: main-rule.md  python-coding-standards.md  python-error-handling.md  python-testing-standards.md
.gemini/: settings.json
.gitlab/merge_request_templates/: Default.md  Security.md
.kilocode/rules/: airflow-01-airflow-dag-standards.md  airflow-02-airflow-operators.md  airflow-03-airflow-testing.md  ansible-01-ansible-playbook-structure.md  ansible-02-ansible-roles.md  ansible-03-ansible-vault.md  git-01-gitops-workflow.md  global-01-devops-standards.md  global-02-security.md  global-03-documentation.md  global-04-software-design-principles.md  kubernetes-01-k8s-manifests.md  kubernetes-02-helm-kustomize.md  kubernetes-03-argocd-applications.md  misc-main-rule.md  python-01-python-code-quality.md  python-02-concurrency-best-practices.md  python-03-api-client-design.md  python-04-python-project-structure.md  terraform-01-terraform-structure.md  terraform-02-terraform-modules.md  terraform-03-terraform-state-backend.md  terraform-04-terraform-security.md
.kilocode/workflows/: airflow-01-dag-generator.md  airflow-02-dag-refactoring.md  airflow-03-operator-custom.md  airflow-04-dag-testing.md  airflow-05-dag-documentation.md  ansible-01-playbook-generator.md  ansible-02-role-creation.md  ansible-03-inventory-management.md  ansible-04-ansible-cfg-generator.md  ansible-04-ansible-test.md  argocd-01-application-generator.md  argocd-02-sync-policy-config.md  backend-backend-test.md  cicd-01-gitlab-ci-python-pipeline.md  documentation-01-readme-generator.md  documentation-02-architecture-doc.md  documentation-03-runbook-generator.md  git-01-conventional-commit-generator.md  git-02-gitignore-generator.md  git-03-pr-description-generator.md  git-04-branch-name-generator.md  git-05-pre-commit-generator.md  kubernetes-01-manifest-generator.md  kubernetes-02-helm-chart-creation.md  kubernetes-03-kustomize-overlay.md  misc-main-prompt.md  python-01-python-refactoring.md  python-02-python-code-review.md  python-03-python-unit-tests.md  python-04-python-script-generator.md  python-05-python-code-explainer.md  python-06-python-docstring-generator.md  python-07-pyproject-generator.md  python-08-python-security-audit.md  terraform-01-module-generator.md  terraform-02-resource-creation.md  terraform-03-state-migration.md  terraform-04-terraform-docs.md  terraform-05-terraform-test.md
.linters/: .gitleaks.toml  .markdownlint.json  .markdownlintignore  .yamllint.yml
.prompt-manager/: config.yaml
.prompt-manager.example/: config.yaml
.prompt-unifier/: config.yaml
agent-os/: config.yml
agent-os/product/: mission.md  roadmap.md  tech-stack.md
agent-os/standards/: index.yml
docs/: ci-security.md  configuration.md  contributing.md  getting-started.md  index.md  license.md  security.md
docs/development/: documentation-guide.md  index.md  makefile.md
docs/reference/: cli-commands.md
docs/stylesheets/: extra.css
docs/usage/: advanced.md  basic.md  creating-prompts.md  examples.md  functional-testing.md
scripts/: run_pr_agent.sh  run_sonar.sh
src/prompt_manager/: __init__.py
src/prompt_unifier/: __init__.py  constants.py
tests/: __init__.py  conftest.py  test_deploy_integration.py  test_version.py
tests/ai/: __init__.py  test_executor.py
tests/cli/: test_ai_integration_cli.py  test_commands.py  test_commands_edge_cases.py  test_common_errors.py  test_deploy_base_path.py  test_deploy_clean_with_tags.py  test_deploy_dry_run.py  test_functional_validation.py  test_git_commands.py  test_global_verbose_flag.py  test_helpers.py  test_init_recap.py  test_list_command.py  test_multi_repo_sync.py  test_recursive_deploy.py  test_rollback_mechanism.py  test_scaff_integration.py  test_service_logging_integration.py  test_status_command.py  test_test_command.py  test_test_command_args.py  test_test_command_extended.py
tests/config/: __init__.py  test_config_manager_tool_handlers.py  test_manager.py
tests/core/: test_batch_validator.py  test_content_parser.py  test_encoding.py  test_functional_test_parser.py  test_functional_validator.py  test_functional_validator_ai.py  test_scaff_validator.py  test_separator.py  test_skill_validator.py  test_validator.py  test_yaml_parser.py
tests/fixtures/: README.md
tests/git/: __init__.py  test_multi_repo_operations.py  test_service.py  test_service_extra.py
tests/handlers/: test_base_handler_edge_cases.py  test_continue_handler.py  test_continue_handler_base_path.py  test_continue_handler_cleanup.py  test_continue_handler_edge_cases.py  test_continue_handler_relative_paths.py  test_continue_handler_status.py  test_continue_handler_subdirectory_rollback.py  test_continue_handler_verification_report.py  test_kilo_code_handler.py  test_kilo_code_handler_verification_report.py  test_kilo_code_skill_deployment.py  test_protocol.py  test_tool_handler_protocol_and_registry.py
tests/integration/: TEST_SCENARIOS.md  test_configurable_base_paths.py  test_end_to_end.py  test_functional_validation_e2e.py  test_git_integration.py  test_logging_e2e.py  test_multi_repo_e2e.py  test_recursive_deploy_e2e.py  test_scaff_integration.py
tests/models/: test_functional_test.py  test_git_config.py  test_prompt.py  test_repository_config.py  test_rule.py  test_scaff.py  test_skill.py  test_validation.py
tests/output/: test_json_formatter.py  test_rich_formatter.py  test_rich_scaff_formatting.py  test_rich_table_formatter.py  test_rich_table_formatter_scaff.py
tests/utils/: test_excerpt.py  test_file_scanner.py  test_formatting.py  test_logging_config.py  test_path_filter.py  (+3 more)
(+357 files in other folders)
